<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_fragment">
    <TextView
        android:id="@+id/tv_recipe_ingredients"
        android:adjustViewBounds="true"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recipe Ingredients"
        android:padding="16dp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/steps_recycler"></android.support.v7.widget.RecyclerView>

</LinearLayout>